# SpatialAI_MCP

./: .gitignore  AGENTS.md  AGENT_PROMPT.md  AGENT_RULES.md  CLAUDE.md  HF_SPACES_README.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  README_FASTMCP.md  README_LOCAL.md  TESTING.md  app.py  app_demo_gradio.py  debug_docs.py  debug_format_detection.py  demo_gradio_requirements.txt  project_details.md  pyproject.toml  pytest.ini  requirements-local.txt  requirements.txt  run_tests.py  setup.py  test_fixes.py  test_simple.py  test_spatial_tools.py  verify_tests.py
.agents/: context.md
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/openproblems-submission/: SKILL.md
.codex/: mcp-config.toml
.codex/skills/spatial-data-validation/: SKILL.md
.codex/skills/viash-component-authoring/: SKILL.md
.cursor/rules/: nextflow-debugging.mdc  openproblems-submission.mdc  openproblems.mdc  spatial-data-validation.mdc  viash-component-authoring.mdc
.gemini/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.kiro/specs/production-mcp-server/: design.md  requirements.md  tasks.md
case-study/: README.md  grade.py  rubric.md
case-study/examples/plain_agent_typical/: config.vsh.yaml  script.py
case-study/examples/skill_guided/: config.vsh.yaml  script.py  test.py
case-study/results/: RESULTS.md
case-study/runner/: README.md  arms.example.json  run.py
case-study/scripts/: strip_skill.sh
case-study/task/: SETUP.md  USER_PROMPT.md  prompt.txt
config/: continue_config_example.json  default_config.yaml  server_config.yaml
context/: data-formats.md  ist-preprocessing-pipeline.md  openproblems-overview.md
data/docs_cache/: docker_docs.md  nextflow_docs.md  openproblems_docs.md  spatial_templates_docs.md  viash_docs.md
docker/: Dockerfile  docker-compose.yml
docs/: AGENT_PROMPT.md  AGENT_RULES.md  CONTINUE_DEV_INTEGRATION.md  CONTINUE_DEV_SETUP.md
docs/archive/: AGENT_INTEGRATION_GUIDE.md  ARCHITECTURE_PIVOT_SUMMARY.md  FASTMCP_REFACTOR_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PRE_TASK2_SUMMARY.md  README.md  SETUP.md
docs/archive/docker/: docker-compose.yml
docs/archive/examples/: simple_client.py
docs/archive/kiro-spec-production-mcp-server/: README.md  requirements.md
docs/archive/project_artifacts/: PRESENTATION_SCRIPT_4MIN.md  README.md
examples/: continue_dev_demo.py  minimal_client.py  simple_client.py
installer/: README.md  __init__.py  __main__.py  cli.py  targets.py
project_artifacts/: DEMO_ENHANCEMENT_SUMMARY.md  ENHANCED_DEMO_GUIDE.md  On-boarding for project “Benchmarking preprocessing of imaging-based spatial transcriptomics”.md  PRESENTATION_SCRIPT_BASIC_4MIN.md  SPATIAL_TRANSCRIPTOMICS_ENHANCEMENTS.md
scripts/: check_upstream_sync.py  test_integration.py
skills/nextflow-debugging/: SKILL.md
skills/openproblems-submission/: SKILL.md
skills/viash-component-authoring/: SKILL.md
src/mcp_server/: __init__.py  cli.py  documentation_generator_simple.py  documentation_scraper.py  gradio_interface.py  http_server.py  main.py
src/openproblems_mcp/: __init__.py  cli.py  config.py  exceptions.py  main.py  metadata_analysis.py  server.py  spatial_tools.py  spatial_validation.py  tool_detection.py
src/utils/: ai_assistant.py  doc_indexer.py
tests/: README.md  conftest.py  test_case_study.py  test_case_study_runner.py  test_fastmcp_server.py  test_installer.py  test_mcp_server.py  test_metadata_analysis.py  test_plugin_manifest.py  test_runner.py  test_spatial_tools.py  test_spatial_validation.py
