[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openproblems-spatial-mcp"
version = "0.1.0"
description = "Production-ready MCP server for OpenProblems spatial transcriptomics workflows"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "OpenProblems MCP Contributors", email = "info@openproblems.bio"},
]
keywords = [
    "mcp",
    "model-context-protocol",
    "spatial-transcriptomics",
    "bioinformatics",
    "nextflow",
    "viash",
    "openproblems"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: OS Independent",
]

# Core dependencies - minimal and focused
dependencies = [
    "fastmcp>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
openproblems-mcp = "openproblems_mcp.cli:main"
openproblems-mcp-server = "openproblems_mcp.main:main"

[project.urls]
Homepage = "https://github.com/openproblems-bio/SpatialAI_MCP"
Documentation = "https://github.com/openproblems-bio/SpatialAI_MCP/docs"
Repository = "https://github.com/openproblems-bio/SpatialAI_MCP"
Issues = "https://github.com/openproblems-bio/SpatialAI_MCP/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
